test/error/call_non_static.colgm
struct A {}

impl A {
    pub func test(self) {}
}

union(enum) B {
    a: A,
    b: f32
}

impl B {
    pub func test(self) {}
}

func main() -> i32 {
    A::test();
    B::test();
    return 0;
}