test/error/call_non_static.result
Error: "A::test" is not a static method
  --> test/error/call_non_static.colgm:17:8
   | 
17 |     A::test();
   |        ^^^^
  --> test/error/call_non_static.colgm:4:9
  | 
4 |     pub func test(self) {}
  |         ^^^^^^^^^^^^^^^^^^
 note: defined here

Error: "B::test" is not a static method
  --> test/error/call_non_static.colgm:18:8
   | 
18 |     B::test();
   |        ^^^^
  --> test/error/call_non_static.colgm:13:9
   | 
13 |     pub func test(self) {}
   |         ^^^^^^^^^^^^^^^^^^
  note: defined here